# esprit2

./: .gitignore  .luarc.json  Cargo.toml  README.md  TODO.md  shell.nix
.cargo/: config.toml
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: console.rs  console_impl.rs  draw.rs  input.rs  main.rs  menu.rs  options.rs  select.rs  server_handle.rs  texture.rs  typography.rs  world_state.rs
client/src/gui/: mod.rs  soul.rs  widget.rs
client/src/state/: mod.rs  world.rs
res/attacks/: bite.toml  scratch.toml
res/esprit/: .luarc.json  bite.lua  frenzy.lua  magic_missile.lua  rc.lua  scratch.lua  sheets.lua  swap.lua
res/esprit/init/: bite.lua  components.lua  crush.lua  debug.lua  frenzy.lua  magic_missile.lua  scratch.lua  sheets.lua  swap.lua  vaults.lua
res/esprit/lib/: ability.lua  basic.lua  movement.lua  resources.lua  spell.lua  team.lua
res/esprit/meta/: combat.lua  resources.lua  userdata.lua  world.lua
res/esprit/meta/resources/: component.lua
res/esprit/meta/types/: action.lua  consider.lua  duration.lua  log.lua
res/init/: bite.lua  components.lua  crush.lua  debug.lua  frenzy.lua  magic_missile.lua  scratch.lua  sheets.lua  statuses.lua  swap.lua  vaults.lua
res/lib/: basic.lua  movement.lua  team.lua
res/lib/input/: melee.lua  single_target.lua
res/meta/: console.lua  input.lua  resources.lua  scripts.lua  userdata.lua  world.lua
res/meta/resources/: component.lua  status.lua
res/meta/types/: action.lua  consider.lua  duration.lua  heuristic.lua  stats.lua
res/party/: aris.toml
res/scripts/: combat.lua  input.lua  scripts.lua  world.lua
res/scripts/attacks/: bite.lua  scratch.lua
res/scripts/consider/: bite.lua  melee_attack.lua  movement.lua  ranged_attack_spell.lua  ranged_buff_spell.lua  scratch.lua
res/scripts/consider/attacks/: bite.lua  scratch.lua
res/scripts/consider/characters/: basic.lua
res/scripts/consider/spells/: magic_missile.lua
res/scripts/input/: crush.lua  melee.lua  single_target.lua
res/scripts/input/debug/: change_affinity.lua
res/scripts/lib/: attack.lua  consider.lua  globals.lua  spell.lua  userdata.lua
res/scripts/lib/consider/: attack.lua  spell.lua
res/scripts/meta/: character.lua  combat.lua  input.lua  resources.lua  scripts.lua  userdata.lua  world.lua
res/scripts/meta/types/: action.lua  log.lua
res/scripts/spells/: crush.lua  magic_missile.lua  swap.lua
res/scripts/spells/debug/: change_affinity.lua  level_up.lua
res/sheets/: aris.toml  luvui.toml
res/spells/: crush.toml  magic_missile.toml  swap.toml
res/spells/debug/: change_affinity.toml  level_up.toml
res/spells/debug/aff/: neg.toml  neg_cha.toml  neg_ord.toml
res/statuses/: bleed.toml  close_combat.toml
res/std/: basic.lua  movement.lua  rc.lua  resources.lua  teams.lua
res/std/init/: teams.lua
res/std/lib/: basic.lua  movement.lua  resources.lua  team.lua
res/vault_sets/: forest.toml
res/vaults/: example.vault
server/: Cargo.toml
server/src/: lib.rs  main.rs  protocol.rs
src/: ability.rs  astar.rs  attack.rs  character.rs  combat.rs  component.rs  consider.rs  console.rs  draw.rs  expression.pest  expression.rs  floor.rs  gui.rs  input.rs  item.rs  lib.rs  lua.rs  main.rs  nouns.rs  options.rs  res.rs  resource.rs  resource_manager.rs  script.rs  soul.rs  spell.rs  spell_menu.rs  status.rs  typography.rs  value.rs  vault.rs  world.rs
src/gui/: mod.rs  widget.rs
src/res/: README.md
user/: options.toml  options.toml.old  world.toml
