[workspace]
members = ["client", "server"]
# This allows you to `cargo run` in the root.
# It shouldn't be an issue to default to client since it uses the engine and server.
default-members = ["client"]

[workspace.dependencies]
rkyv = "0.8.8"
mlua = { version = "0.10.1", features = ["luajit", "macros", "error-send", "userdata-wrappers"] }

[workspace.lints]
clippy.module_name_repetitions = "warn"
clippy.items_after_statements = "warn"
clippy.inconsistent_struct_constructor = "warn"
clippy.unwrap_used = "warn"

[package]
name = "esprit2"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# Parser generator for expression.rs
# this is keeping thiserror on v1, but master has updated it so pest should have a new release to fix this soon
pest = "2.7.10"
pest_derive = "2.7.10"

aho-corasick = "1.1.2" # Used by nouns.rs for replacing pronouns
mlua.workspace = true
paste = "1.0.14" # Useful for proc macros
rand = "0.8.5"
rkyv.workspace = true
thiserror = "2.0.3"
tracing = "0.1.40"
