[workspace]
members = ["client", "server"]
# This allows you to `cargo run` in the root.
# It shouldn't be an issue to default to client since it uses the engine and server.
default-members = ["client"]

[workspace.dependencies]
rkyv = "0.8.8"

[workspace.dependencies.mlua]
version = "0.10.1"
features = [
  "luajit52", # jit for performance, 5.2 for __ipairs
  "vendored", # necessary to ensure luajit is compiled with the 5.2 flag.
  "macros",
  "error-send",
  "userdata-wrappers", # for Rc, etc.
]

[workspace.lints]
clippy.module_name_repetitions = "warn"
clippy.items_after_statements = "warn"
clippy.inconsistent_struct_constructor = "warn"
clippy.unwrap_used = "warn"

[package]
name = "esprit2"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
aho-corasick = "1.1.2" # Used by nouns.rs for replacing pronouns
anyhow = "1.0.98"
mlua.workspace = true
paste = "1.0.14" # Useful for proc macros
rand = "0.9.1"
rkyv.workspace = true
thiserror = "2.0.3"
tracing = "0.1.40"
