[package]
name = "esprit2-client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
esprit2.path = "../"
esprit2-server.path = "../server"
mlua.workspace = true
rand = "0.8.5"
sdl2 = { version = "0.37.0", features = ["image"] } # TODO: Is image even necessary?
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "2.0.3"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rkyv.workspace = true
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.16"
cosmic-text = "0.13.2"
