[package]
name = "esprit2-client"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
cosmic-text = "0.14.2"
esprit2.path = "../"
esprit2-server.path = "../server"
mlua.workspace = true
parking_lot = "0.12.3"
rand = "0.9.1"
rkyv.workspace = true
sdl3 = { version = "0.14.6", features = ["image"] } # TODO: Is image even necessary?
serde = { version = "1.0.208", features = ["derive"] }
thiserror = "2.0.3"
tokio-stream = "0.1.16"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
