[package]
name = "esprit2-server"
version = "0.1.0"
edition = "2021"

[dependencies]
esprit2.path = "../"
mlua = "0.9.9"
rand = "0.8.5"
serde = "1.0.208"
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rkyv.workspace = true
clap = { version = "4.5.17", features = ["derive"] }
