[package]
name = "esprit2-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
esprit2.path = "../"
mlua.workspace = true
rand = "0.8.5"
serde = "1.0.208"
thiserror = "1.0.63"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rkyv.workspace = true
clap = { version = "4.5.17", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
url = "2.5.2"
percent-encoding = "2.3.1"
tokio = { version = "1.40.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.16"
futures = "0.3.31"
