[package]
name = "esprit2-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
esprit2.path = "../"
futures = "0.3.31"
mlua.workspace = true
percent-encoding = "2.3.1"
rkyv.workspace = true
serde = "1.0.208"
thiserror = "2.0.3"
tokio-stream = "0.1.16"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
